paths with process
